--- a/src/Application/View/CreateUser.fxml
+++ b/src/Application/View/CreateUser.fxml
@@ -5,15 +5,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.CreateUser">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.CreateUser">
    <children>
-      <Button layoutX="170.0" layoutY="174.0" mnemonicParsing="false" onAction="#onBackClick" text="Back" />
-      <TextField fx:id="Name" layoutX="60.0" layoutY="52.0" />
-      <TextField fx:id="Address" layoutX="60.0" layoutY="89.0" />
-      <TextField fx:id="Phone" layoutX="60.0" layoutY="126.0" />
+      <Button layoutX="485.0" layoutY="32.0" mnemonicParsing="false" onAction="#onBackClick" text="Back" />
+      <TextField fx:id="Name" layoutX="92.0" layoutY="47.0" promptText="Enter name" />
+      <TextField fx:id="Address" layoutX="92.0" layoutY="84.0" promptText="Enter address" />
+      <TextField fx:id="Phone" layoutX="92.0" layoutY="121.0" promptText="Enter phone number" />
       <Text layoutX="23.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
       <Text layoutX="12.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
       <Text layoutX="11.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone #" />
-      <Button layoutX="60.0" layoutY="174.0" mnemonicParsing="false" onAction="#onCreateUserClick" text="Create" />
+      <Button layoutX="92.0" layoutY="169.0" mnemonicParsing="false" onAction="#onCreateUserClick" text="Create" />
    </children>
 </AnchorPane>
