--- a/src/Application/View/AdminEdition.fxml
+++ b/src/Application/View/AdminEdition.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Application.Controller.AdminEdition"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.AdminEdition">
+   <children>
+      <Button fx:id="buttonManuallyAddUser" layoutX="44.0" layoutY="42.0" mnemonicParsing="false" onAction="#onManuallyAddClicked" text="Manually Add User" />
+      <Button fx:id="buttonSelectCustDetails" layoutX="44.0" layoutY="98.0" mnemonicParsing="false" onAction="#onSelectCustomerDetailsClicked" text="Select Customer Details" />
+      <Button fx:id="buttonCampersUsed" layoutX="44.0" layoutY="152.0" mnemonicParsing="false" onAction="#onCampersUsedClicked" text="Campers being used" />
+      <Button fx:id="buttonEnter" layoutX="44.0" layoutY="200.0" mnemonicParsing="false" mouseTransparent="true" onAction="#onEnterClicked" opacity="0.0" text="Enter Customer" />
+      <TextField fx:id="textfieldEditionOne" layoutX="348.0" layoutY="73.0" />
+      <TextField fx:id="textfieldEditionTwo" layoutX="348.0" layoutY="114.0" />
+      <TextField fx:id="textfieldEditionThree" layoutX="348.0" layoutY="152.0" />
+      <TextField fx:id="textfieldEditionFour" layoutX="348.0" layoutY="200.0" />
+      <TextArea fx:id="textareaEditionView" layoutX="16.0" layoutY="240.0" prefHeight="160.0" prefWidth="569.0" />
+      <Text fx:id="manualAddName" layoutX="289.0" layoutY="94.0" mouseTransparent="true" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+      <Text fx:id="manualAddAddress" layoutX="282.0" layoutY="135.0" mouseTransparent="true" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
+      <Text fx:id="manualAddPhone" layoutX="288.0" layoutY="173.0" mouseTransparent="true" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone" />
+      <Text fx:id="manualAddRentals" layoutX="285.0" layoutY="221.0" mouseTransparent="true" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rentals" />
+      <Button fx:id="buttonExit" layoutX="524.0" layoutY="27.0" mnemonicParsing="false" onAction="#onExitReturnStart" text="Exit" />
+   </children>
 </AnchorPane>
