--- a/src/Autocamper/View/View.fxml
+++ b/src/Autocamper/View/View.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.View">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Autocamper.Controller.View">
    <children>
       <Button layoutX="200.0" layoutY="130.0" mnemonicParsing="false" onAction="#onMakeReservationClick" text="Make Reservation" />
    </children>
