--- a/src/Autocamper/View/Reservation.fxml
+++ b/src/Autocamper/View/Reservation.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.*?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.Reservation">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Autocamper.Controller.Reservation">
    <children>
       <Button layoutX="274.0" layoutY="174.0" mnemonicParsing="false" onAction="#onCancelButtonClick" text="Cancel" />
       <Text layoutX="213.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="That's all folks!" wrappingWidth="172.13671875" />
