--- a/src/Autocamper/View/AdminEdition.fxml
+++ b/src/Autocamper/View/AdminEdition.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.AdminEdition">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Autocamper.Controller.AdminEdition">
    <children>
       <Button fx:id="buttonManuallyAddUser" layoutX="44.0" layoutY="42.0" mnemonicParsing="false" onAction="#onManuallyAddClicked" text="Manually Add User" />
       <Button fx:id="buttonSelectCustDetails" layoutX="44.0" layoutY="98.0" mnemonicParsing="false" onAction="#onSelectCustomerDetailsClicked" text="Select Customer Details" />
