--- a/src/Autocamper/View/AdminLogin.fxml
+++ b/src/Autocamper/View/AdminLogin.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.AdminLogin">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Autocamper.Controller.AdminLogin">
    <children>
       <TextField fx:id="userTextfield" layoutX="88.0" layoutY="77.0" promptText="user" />
       <TextField fx:id="passTextfield" layoutX="88.0" layoutY="144.0" promptText="pass" />
