--- a/src/Autocamper/View/CreateUser.fxml
+++ b/src/Autocamper/View/CreateUser.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller.CreateUser">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Autocamper.Controller.CreateUser">
    <children>
       <Button layoutX="485.0" layoutY="32.0" mnemonicParsing="false" onAction="#onBackClick" text="Back" />
       <TextField fx:id="Name" layoutX="92.0" layoutY="47.0" promptText="Enter name" />
@@ -15,5 +15,6 @@
       <Text layoutX="12.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
       <Text layoutX="11.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone #" />
       <Button layoutX="92.0" layoutY="169.0" mnemonicParsing="false" onAction="#onCreateUserClick" text="Create" />
+      <Button fx:id="bypassButton" layoutX="499.0" layoutY="139.0" mnemonicParsing="false" onAction="#onBypassClick" text="HiddenBypassLoginButton" />
    </children>
 </AnchorPane>
